tests/knative/knative-serving-install/base/test_data/expected/networking.istio.io_v1alpha3_gateway_cluster-local-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    kustomize.component: knative
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: v0.11.1
  name: cluster-local-gateway
  namespace: knative-serving
spec:
  selector:
    istio: cluster-local-gateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
